# Matching_Machine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build&test_cmds.txt
benchmarks/: bench_baseline_mutex.cpp  bench_matching_engine.cpp  bench_order_book.cpp  bench_spsc_ring_buffer.cpp
benchmarks/bench_scripts/: run_all_benchmarks.sh  run_bench_order_book.sh  run_bench_spsc_ring_buffer.sh  show_bench.sh
benchmarks/bench_scripts/matching_engine/: run_bench_matching_engine.sh
data/: sample_ticks.csv
docs/: optimization_log.md  project_overview.md
docs/snapshots/: order_book_v1_deque.cpp
include/: feed_simulator.h  latency_recorder.h  matching_engine.h  memory_pool.h  order.h  order_book.h  spsc_ring_buffer.h  trade_ring_buffer.h
learning_notes/: 00_introduction.md  01_cmake_and_project_structure.md  02_order_struct_and_cache.md  03_orderbook_mutex_version.md  04_feed_simulator.md  05_spsc_ring_buffer.md  06_memory_pool.md  07_latency_measurement.md  08_google_benchmark.md  09_perf_and_flamegraph.md  10_optimization.md  11_pipeline.md  12_conclusion.md  cpp-quant-matching-engine-plans.md  history_202604011614.md  个人经历和困惑.md  量化项目计划书.md
results/: bench_after_opt.json
scripts/: run_perf.sh
src/: feed_simulator.cpp  main.cpp  matching_engine.cpp  order_book.cpp
tests/: test_matching_engine.cpp  test_memory_pool.cpp  test_order_book.cpp  test_spsc_ring_buffer.cpp
